[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-env"
version = "0.1.0"
description = "OpenEnv Code Review Environment"
authors = [
    { name = "Zaid" },
    { name = "Adnan" },
    { name = "Taheer" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv>=0.1.13"
]
requires-python = ">=3.10"

[project.scripts]
server = "server.app:main"